# life_expectancy_predictor

./: .gitignore  README.md  pyproject.toml
summative/API/: main.py  prediction.py  requirements.txt
summative/FlutterApp/: README.md  pubspec.yaml
summative/FlutterApp/android/app/: build.gradle.kts
summative/FlutterApp/android/app/src/main/: AndroidManifest.xml
summative/FlutterApp/android/app/src/main/kotlin/com/belysekalisa/life_expectancy_predictor/: MainActivity.kt
summative/FlutterApp/ios/Runner/: Info.plist
summative/FlutterApp/ios/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/lib/: main.dart
summative/FlutterApp/linux/: CMakeLists.txt
summative/FlutterApp/linux/runner/: my_application.cc
summative/FlutterApp/macos/Runner.xcodeproj/: project.pbxproj
summative/FlutterApp/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
summative/FlutterApp/macos/Runner/Configs/: AppInfo.xcconfig
summative/FlutterApp/test/: widget_test.dart
summative/FlutterApp/web/: index.html  manifest.json
summative/FlutterApp/windows/: CMakeLists.txt
summative/FlutterApp/windows/runner/: Runner.rc  main.cpp
summative/linear_regression/: feature_names.joblib  multivariate.ipynb  scaler.joblib
