[project]
name = "linear-regression-model"
version = "0.1.0"
description = "Predicting life expectancy in developing countries from WHO health and socioeconomic indicators"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.51.0",
]
